@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-07T00:42:28Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
+  "timestamp" : "2022-05-08T00:43:37Z",
+  "count" : 2,
+  "count_minmax" : [ 0, 2 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
   "uniques_prev_day_inc" : 0,
   "uniques_prev_day_dec" : 0
 }
