@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-07T00:42:28Z",
+  "timestamp" : "2022-05-08T00:43:37Z",
   "count_outdated" : 8,
   "uniques_outdated" : 2,
-  "count" : 130,
-  "uniques" : 8,
+  "count" : 132,
+  "uniques" : 9,
   "views" : [
     {
       "timestamp": "2022-04-29T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 16, 17 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
