@@ -1,5 +1,5 @@
 {
-  "count": 122,
+  "count": 124,
   "uniques": 1,
   "views": [
     {
@@ -30,6 +30,11 @@
     {
       "timestamp": "2022-05-06T00:00:00Z",
       "count": 17,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
