@@ -1,3 +1,9 @@
+2022-05-08T00:43:37Z:
+* notice: last 14d: all unq: 124 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 130 8
+* notice: next accum: outdated-all outdated-unq / all unq: 8 2 / 132 9
+* notice: prev json diff // prev day diff: unq all: +1 +2 / -0 -0 // +1 +2 / -0 -0
+
 2022-05-07T00:42:28Z:
 * notice: last 14d: all unq: 122 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 129 8
